--- a/lab_01/lab_01.adoc
+++ b/lab_01/lab_01.adoc
@@ -16,7 +16,7 @@ $ cf api api.run.pivotal.io
 $ cf login
 ----
 +
-Follow the prompts, choosing `oreilly-class` when prompted for an organization and `studentXX` when prompted for a space.
+Follow the prompts.
 
 == Build and Push!
 
